added 'shop now' to the ptag for the sale bar

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <div class="countdown">
           <h3>Hurry! Sale ends soon!</h3>
           <div class="bar">
+            <p>Shop Now!</p>
 
           </div>
         </div>
